<resources>
    <string name="app_name">DeezerApp</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="album">Album</string>
    <string name="playlist">Playlist</string>
    <string name="artist">Artist</string>
    <string name="tracks">Tracks</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="albums">Albums</string>
</resources>
