<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="data"
                type="fr.athanase.deezerapp.feature.home.HomeFragmentDatabinding"/>
    </data>
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tracks"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tracks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:nestedScrollingEnabled="false"
                    app:items="@{data.tracks}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_model_track"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/albums"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/albums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:nestedScrollingEnabled="false"
                    app:items="@{data.albums}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_model_track"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artists"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/artists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:nestedScrollingEnabled="false"
                    app:items="@{data.artists}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_model_track"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playlists"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/playlists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:nestedScrollingEnabled="false"
                    app:items="@{data.playlists}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_model_track"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>