<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="data"
                type="fr.athanase.deezerapp.feature.search.SearchDataBinding"/>
        <import type="android.view.View"/>
        <import type="fr.athanase.deezerapp.feature.search.ArtistState"/>
        <import type="fr.athanase.deezerapp.feature.search.AlbumState"/>
    </data>

    <androidx.core.widget.NestedScrollView
            android:background="@android:color/holo_purple"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tracks_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tracks"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:visibility="@{data.showTracks? View.VISIBLE : View.GONE}"
            />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tracks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:nestedScrollingEnabled="false"
                    app:items="@{data.tracks}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_model_track"
                    android:visibility="@{data.showTracks? View.VISIBLE : View.GONE}"
            />


            <TextView
                    android:id="@+id/albums_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/albums"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:visibility="@{data.showAlbums ? View.VISIBLE : View.GONE}"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/albums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:nestedScrollingEnabled="false"
                    app:items="@{data.albums}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:visibility="@{data.showAlbums ? View.VISIBLE : View.GONE}"
                    tools:listitem="@layout/item_model_track"/>

            <TextView
                    android:visibility="@{data.showArtists ? View.VISIBLE : View.GONE}"
                    android:id="@+id/artist_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artists"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/artists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:nestedScrollingEnabled="false"
                    app:items="@{data.artists}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:visibility="@{data.showArtists ? View.VISIBLE : View.GONE}"
                    tools:listitem="@layout/item_model_track"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playlists"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:visibility="@{data.showPlaylists? View.VISIBLE : View.GONE}"
            />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/playlists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:nestedScrollingEnabled="false"
                    app:items="@{data.playlists}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_model_track"
                    android:visibility="@{data.showPlaylists? View.VISIBLE : View.GONE}"
            />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
